--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,22 @@
   "bugs": {
     "url": "https://github.com/seangrant/react-loan-calculator/issues"
   },
-  "homepage": "https://github.com/seangrant/react-loan-calculator#readme"
+  "homepage": "https://github.com/seangrant/react-loan-calculator#readme",
+  "dependencies": {
+    "babel-core": "^5.8.22",
+    "babel-loader": "^5.3.2",
+    "bootstrap": "^3.3.5",
+    "css-loader": "^0.16.0",
+    "express": "^4.13.3",
+    "file-loader": "^0.8.4",
+    "http-proxy": "^1.11.1",
+    "jquery": "^2.1.4",
+    "react": "^0.13.3",
+    "react-bootstrap": "^0.24.5",
+    "react-router": "^0.13.3",
+    "script-loader": "^0.6.1",
+    "style-loader": "^0.12.3",
+    "webpack": "^1.11.0",
+    "webpack-dev-server": "^1.10.1"
+  }
 }
