--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^0.13.3",
     "react-bootstrap": "^0.24.5",
     "react-router": "^0.13.3",
+    "react-router-bootstrap": "^0.18.1",
     "script-loader": "^0.6.1",
     "style-loader": "^0.12.3",
     "webpack": "^1.11.0",
