--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "file-loader": "^0.8.4",
     "http-proxy": "^1.11.1",
     "jquery": "^2.1.4",
+    "less": "^2.5.1",
+    "less-loader": "^2.2.0",
     "react": "^0.13.3",
     "react-bootstrap": "^0.24.5",
     "react-router": "^0.13.3",
     "react-router-bootstrap": "^0.18.1",
+    "reflux": "^0.2.12",
     "script-loader": "^0.6.1",
     "style-loader": "^0.12.3",
     "webpack": "^1.11.0",
